[package]
name = "proxyc_common"
version = "0.1.0"
authors = ["j3d42 <melvil.guillaume@gmail.com>"]
edition = "2021"

[dependencies]
cidr = { version = "0.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
thiserror = "1.0"
log = "0.4"
url = "2.2"
