[package]
name = "libproxyc"
version = "0.1.0"
authors = ["j3d42 <melvil.guillaume@gmail.com>"]
edition = "2018"

[dependencies.proxyc_common]
path = "../common"

[dependencies]
byteorder = "1.4.3"
cstr = "0.2"
log = "0.4"
pretty_env_logger = "0.3"
nix = "0.20"
once_cell = "1.7"

[lib]
# libraries are automatically prefixed with "lib"
name = "proxyc"
crate-type = ["cdylib"]
