[package]
name = "libproxyc"
version = "0.1.0"
authors = ["j3d42 <melvil.guillaume@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.4.3"
cstr = "0.2"
thiserror = "1.0"
log = "0.4"
pretty_env_logger = "0.3"
nix = "0.22"
once_cell = "1.7"
proxyc_common = { path = "../common" }

[lib]
# libraries are automatically prefixed with "lib"
name = "proxyc"
crate-type = ["cdylib"]
